--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-.todo-item{
-    width: 320px;
-    paddding: 8px;
-    border:1px solid black;
-    margin-top:10px;
+.App {
     text-align: center;
-}
-.todo-item .todo-done{
-    text-decoration: line-through;
 }
